<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/defaultMargin"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/baseline_person_24" />

    <EditText
        android:id="@+id/nomEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoImageView"
        android:layout_marginTop="24dp"
        android:hint="@string/sondage_enregistrement_nom"
        android:inputType="text" />

    <EditText
        android:id="@+id/prenomEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nomEdit"
        android:layout_marginTop="16dp"
        android:hint="@string/sondage_enregistrement_prenom"
        android:inputType="text" />

    <EditText
        android:id="@+id/villeEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/prenomEdit"
        android:layout_marginTop="16dp"
        android:hint="@string/sondage_enregistrement_ville"
        android:inputType="text" />

    <EditText
        android:id="@+id/emailEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/verifButton"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEdit"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:theme="@style/textButton"
        android:id="@+id/createAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEdit"
        android:layout_marginTop="24dp"
        android:text="@string/create_acc_btn" />

    <TextView
        android:id="@+id/alreadyAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/createAccountButton"
        android:layout_marginTop="20dp"
        android:text="@string/already_acc"
        android:textAlignment="center"
        android:theme="@style/text" />

    <Button
        android:id="@+id/verifButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/villeEdit"
        android:layout_marginTop="16dp"
        android:text="@string/verifier_emplacement"
        android:theme="@style/textButton"/>

</RelativeLayout>