<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/defaultMargin"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/baseline_person_24" />

    <EditText
        android:id="@+id/emailConnexion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoImageView"
        android:layout_marginTop="24dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordConnexion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailConnexion"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:theme="@style/textButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordConnexion"
        android:layout_marginTop="24dp"
        android:text="@string/connexion_login_btn" />

    <TextView
        android:theme="@style/text"
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_marginTop="45dp"
        android:text="@string/connexion_forgot_mdp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/noaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgotPasswordTextView"
        android:layout_marginTop="20dp"
        android:text="@string/conn_no_account"
        android:textAlignment="center"
        android:theme="@style/text" />
    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_marginTop="16dp"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:visibility="gone" />

</RelativeLayout>